<resources>
    <string name="app_name">Electric Quizer</string>
    <string name="btnHostQuiz">Spiel hosten</string>
    <string name="btnEnterQuiz">Spiel beitreten</string>
    <string name="btnLogout">Logout</string>
    <string name="headline">Electric Quizer</string>
    <string name="btPlayer1">Spieler 1</string>
    <string name="btPlayer2">Spieler 2</string>
    <string name="btPlayer3">Spieler 3</string>
    <string name="btPlayer4">Spieler 4</string>
    <string name="btInvitation">Spieler einladen</string>
    <string name="tvLogin">Login</string>
    <string name="btCreateAcc">Account erstellen</string>
    <string name="auth_failed">Authentifizierung fehlgeschlagen!</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="lobby_headline">Wähle deinen Platz</string>
    <string name="btnCreateQuiz">Quiz erstellen</string>
    <string name="email">E-Mail</string>
    <string name="alias">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
