<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btnCreateQuiz"
            style="@android:style/Widget.Material.Button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            android:drawableBottom="@mipmap/icons8_regel_40_negated"
            android:text="@string/btnCreateQuiz"
            app:layout_constraintBottom_toTopOf="@+id/btnHostQuiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnHostQuiz"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            android:drawableBottom="@mipmap/icons8_warteschlange_40_negated"
            android:text="@string/btnHostQuiz"
            app:layout_constraintBottom_toTopOf="@+id/btnSearchQuiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateQuiz" />

        <Button
            android:id="@+id/btnSearchQuiz"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="32dp"
            android:drawableBottom="@mipmap/icons8_netzwerk_40_negated"
            android:text="@string/btnEnterQuiz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnHostQuiz" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>